UPDATE: Fixed formatting in the tooltip-quest.hbs template by adding a space after "GM Note:" in the GM hint section. This minor adjustment improves readability and presentation of the tooltip information.

--- a/styles/quest-markers.css
+++ b/styles/quest-markers.css
@@ -108,19 +108,20 @@
 }
 
 .quest-tooltip-state {
-    font-size: 1.0em;
-    font-weight: 200;
+    font-size: 0.85em;
+    font-weight: 600;
     color: rgba(255, 255, 255, 0.95);
-    background-color: rgba(37, 197, 237, 0.95);
+    background-color: rgba(37, 140, 165, 0.95);
     margin-top: 4px;
     margin-bottom: 4px;
     text-transform: uppercase;
-    padding: 0px 4px 0px 4px;
+    padding: 1px 4px 1px 4px;
     border-radius: 3px;
 }
+
 .quest-tooltip-state.state-active {
     color: rgba(255, 255, 255, 0.95);
-    background-color: rgba(37, 197, 237, 0.95);
+    background-color: rgba(37, 140, 165, 0.95);
 }
 .quest-tooltip-state.state-completed {
     color: rgba(255, 255, 255, 0.95);
